# test_debian_package

my_lib/: CMakeLists.txt  package.xml
my_lib/src/: my_lib.cpp
test_debian_package/: CMakeLists.txt  package.xml
use_my_lib/: CMakeLists.txt  package.xml
use_my_lib/include/use_my_lib/: use_my_lib.h
use_my_lib/src/: use_my_lib_node.cpp
